# chinook-pydantic-repository

./: .env-example  .gitignore  Makefile  README.md  db_example.py  db_pool_example.py  pyproject.toml
database/: __init__.py
docs/: database-chinook.mermaid  database_infrastructure.md  database_schema.md  model_album.md  model_artist.md  model_artist_docs.md  model_customer.md  model_employee.md  model_genre.md  model_invoice.md  model_invoice_line.md  model_media_type.md  model_playlist.md  model_playlist_track.md  model_track.md  repository_patterns.md
models/: __init__.py  album.py  artist.py  artist_docs.py  employee.py  invoice.py  invoice_line.py  track.py
repository/: __init__.py  album.py  artist.py  artist_docs.py  base.py  customer.py  employee.py  genre.py  invoice.py  invoice_line.py  media_type.py  playlist.py  playlist_track.py  track.py
samples/: .env-example  db_example.py  db_pool_example.py  pyproject.toml
src/chinook_pydantic_repository/: __init__.py
src/chinook_pydantic_repository/database/: __init__.py  session.py
src/chinook_pydantic_repository/models/: __init__.py  album.py  artist.py  artist_docs.py  customer.py  employee.py  genre.py  invoice.py  invoice_line.py  media_type.py  playlist.py  playlist_track.py  track.py
src/chinook_pydantic_repository/repository/: __init__.py  album.py  artist.py  artist_docs.py  base.py  customer.py  employee.py  genre.py  invoice.py  invoice_line.py  media_type.py  playlist.py  playlist_track.py  track.py
tests/: test_database.py  test_models.py  test_repositories.py
