[project]
name = "chinook-pydantic-repository"
version = "0.1.0"
description = "A clean three-tier architecture for interacting with the Chinook database using Python, Pydantic, and the Repository Pattern."
readme = "README.md"
authors = [
    { name = "Paul Wood", email = "paulowoody@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
managed = true

[[tool.uv.index]]
name = "cloudsmith"
url = "https://dl.cloudsmith.io/public/paulowoody/chinook-pydantic-repository/python/simple/"
publish-url = "https://python.cloudsmith.io/paulowoody/chinook-pydantic-repository/"
explicit = true

[project.urls]
repository = "https://github.com/paulowoody/chinook-pydantic-repository"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

